# agente-paper

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  PRIVACY.md  README.md  SECURITY.md  SESSION_SUMMARY_2026-02-14.md  SESSION_SUMMARY_2026-02-15.md  docker-compose.override.yml  docker-compose.yml
bot_gateway/: Dockerfile  pyproject.toml
bot_gateway/app/: authz.py  backlog.py  formatting.py  llm_gemini.py  logging_conf.py  main.py  orchestrator.py  rate_limit.py  schemas.py  telegram_handlers.py
bot_gateway/app/channels/: base.py  discord_adapter.py  telegram_adapter.py  telegram_signals.py  whatsapp_adapter.py
bot_gateway/app/core/: mcp_client.py  transactional_core.py
bot_gateway/app/memory/: models.py  policies.py  store.py
bot_gateway/app/prompts/: router_instructions.txt  system.txt
bot_gateway/app/tools/: audio_transcriber.py  vision_service.py
bot_gateway/app/vision/: decode.py  normalize.py  ocr.py  preprocess.py
data/: capabilities_backlog.md
mcp_server/: Dockerfile  pyproject.toml
mcp_server/app/: auth.py  guardrails.py  mysql_client.py  product_search.py  schema_introspect.py  server.py  tools_schema.py
ops/dokploy/mysql/: .env.example  docker-compose.yml
ops/dokploy/mysql/init/: 01_readonly_bot.sql
ops/scripts/: import_mysql_dump.sh  init_mysql_readonly.sql  smoke_test.sh
ops/vps/: DEPLOY.md  deploy_vps.sh  docker-compose.vps.yml
worker/: Dockerfile  pyproject.toml
worker/app/: logging_conf.py  tasks.py  worker.py
