[project]
name = "mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "sqlalchemy==2.0.44",
  "pymysql==1.1.1",
  "cryptography==46.0.0",
  "mcp==1.13.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
