[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "redis==5.2.1",
  "rq==1.16.2",
  "opencv-python-headless==4.10.0.84",
  "numpy==2.1.3",
  "pyzbar==0.1.9",
  "pytesseract==0.3.13"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
